Add Streambot page and Dashboard

--- a/Gamecloud.Web/Views/Home/_Home.cshtml
+++ b/Gamecloud.Web/Views/Home/_Home.cshtml
@@ -2,7 +2,7 @@
 
 <head>
 
-    <title>Clips Center</title>
+    <title>Home</title>
 
     <script src="https://code.jquery.com/jquery.min.js"></script>
 
@@ -16,7 +16,7 @@
 
 <body>
 
-    <h1>Twitch Channel</h1>
+    <h1 data-bind="text: ob.Hometown"></h1><h1>Twitch Channel</h1>
     <table class="table">
         <tbody>
             <tr>
