--- a/Gamecloud.Web/Views/Shared/_Layout.cshtml
+++ b/Gamecloud.Web/Views/Shared/_Layout.cshtml
@@ -22,9 +22,9 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("Dashboard", "Dashboard", "Home", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Dashboard", "Index", "Dashboard", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("API", "Index", "Help", new { area = "HelpPage" }, null)</li>
-                    <li>@Html.ActionLink("Streambot", "Streambot", "Home", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Streambot", "Index", "Streambot", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("Docs", "Document", "Home", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("Clips", "Clips", "Home", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("Stream", "Stream", "Home", new { area = "" }, null)</li> 
