Add clips and streams pages and controllers

--- a/Gamecloud.Web/Content/Site.css
+++ b/Gamecloud.Web/Content/Site.css
@@ -1,7 +1,7 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
-    color: #eaeaea;
+    color: #008080;
     background: -webkit-linear-gradient(left, #cecece 0%,#e8e8e8 34%,#e8e8e8 66%,#cecece 100%); /* Chrome10+,Safari5.1+ */
     /*font-family: 'pt_sansregular';*/
 }
