--- a/Gamecloud.Web/Views/Shared/_Layout.cshtml
+++ b/Gamecloud.Web/Views/Shared/_Layout.cshtml
@@ -25,9 +25,9 @@
                     <li>@Html.ActionLink("Dashboard", "Index", "Dashboard", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("API", "Index", "Help", new { area = "HelpPage" }, null)</li>
                     <li>@Html.ActionLink("Streambot", "Index", "Streambot", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("Docs", "Document", "Home", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("Clips", "Clips", "Home", new { area = "" }, null)</li>
-                    <li>@Html.ActionLink("Stream", "Stream", "Home", new { area = "" }, null)</li> 
+                    <li>@Html.ActionLink("Docs", "Index", "Documents", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Clips", "Index", "Clips", new { area = "" }, null)</li>
+                    <li>@Html.ActionLink("Stream", "Index", "Streams", new { area = "" }, null)</li> 
                     
                 </ul>
                 @Html.Partial("_LoginPartial")
