Add documents page and update dashboard content

--- a/Gamecloud.Web/Views/Shared/_Layout.cshtml
+++ b/Gamecloud.Web/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>
+                    @*<li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, null)</li>*@
                     <li>@Html.ActionLink("Dashboard", "Index", "Dashboard", new { area = "" }, null)</li>
                     <li>@Html.ActionLink("API", "Index", "Help", new { area = "HelpPage" }, null)</li>
                     <li>@Html.ActionLink("Streambot", "Index", "Streambot", new { area = "" }, null)</li>
