--- a/Gamecloud.Web/Views/Dashboard/_Dashboard.cshtml
+++ b/Gamecloud.Web/Views/Dashboard/_Dashboard.cshtml
@@ -2,7 +2,73 @@
 <h2>Dashboard</h2>
 
 
+<h1 data-bind="text: ob.Hometown"></h1><h1>Twitch Channel</h1>
+<table class="table">
+    <tbody>
+    <tr>
+        <td>
+            <script src="http://player.twitch.tv/js/embed/v1.js"></script>
+            <div id="SamplePlayerDivID"></div>
+            <script type="text/javascript">
+                var options = {
+                    width: 854,
+                    height: 480,
+                    channel: "jaxcoder",
+                };
+                var player = new Twitch.Player("SamplePlayerDivID", options);
+                player.setVolume(0.5);
+            </script>
+            @*<iframe src="https://clips.twitch.tv/embed?clip=IncredulousAbstemiousFennelImGlitch"
+                    height="360"
+                    width="640"
+                    frameborder="0"
+                    scrolling="no"
+                    allowfullscreen="true"></iframe>*@
+        </td>
+        <td>
+            <iframe frameborder="0"
+                    scrolling="no"
+                    id="chat_embed"
+                    src="http://www.twitch.tv/jaxcoder/chat"
+                    height="500"
+                    width="350">
+            </iframe>
+        </td>
+    </tr>
+    </tbody>
+</table>
+   
+@*<table>
+        <h1 class="page-title"> Clips Center</h1>
+        <form id="clipsform">
+            <table class="table">
+                <tr>
+                    <td>
+                        <label for="client-id" class="post_ttl control-label">Enter your Client Id here</label>
+                    </td>
+                    <td>
+                        <input type="text" id="client-id" class="readmore form-control" />
 
-<span data-bind="text: ob.UserName"></span>
+                    <td>
+                        <label for="game" class="post_ttl control-label"> Enter your game here</label>
+                    </td>
+                    <td>
+                        <input type="text" id="game" class="readmore form-control">
+                    </td>
 
+                    <td>
+                        <button type="submit" id="clipsbutton" class="readmore">Get Clips</button>
+                    </td>
+                </tr>
+            </table>
+        </form>
+        <div id="game-div">
+            <table>
+                <tr>
+                    <td><img id="game-image" width="200" height="144"></td>
+                    <td style="width: 40%"></td>
+                </tr>
+            </table>
+        </div>
+    </table>*@
 <!-- /ko -->
