--- a/Gamecloud.Web/Views/Home/_Home.cshtml
+++ b/Gamecloud.Web/Views/Home/_Home.cshtml
@@ -1,23 +1,55 @@
 ﻿<!-- ko with: home -->
 
-<head>
-
-    <title>Home</title>
-    
-    
-
-    <link rel="stylesheet" href="css/styles.css">
-    <script src="https://code.jquery.com/jquery.min.js"></script>
-    <script src="js/index.js"></script>
-
-
-</head>
-
-
-
-<body>
-
-
-</body>
+<div class="jumbotron text-center">
+<div class="container">
+    <a href="/" class="lang-logo">
+        <img src="/Images/lang-logo.png">
+    </a>
+    <h1>Streamster Beta</h1>
+    <p>Understanding how to get the most out of the Streamster platform</p>
+    <a type="button" class="btn btn-lg btn-default" href="/Views/Documents/Index.cshtml">
+        <span class="glyphicon glyphicon-flash"></span> Getting Started</a>
+    <a type="button" class="btn btn-lg btn-primary" href="https://github.com/codenamejason/Streamster-Demo">
+        <span class="glyphicon glyphicon-download"></span> Source on GitHub</a>
+</div>
+</div>
+<div class="container">
+    <!-- <div class="alert alert-info text-center" role="alert">
+        <a href="/gettingStarted" class="alert-link"> Start Streamster</a>
+    </div>
+    <hr>
+    <div class="row"> -->
+    <div class="col-md-6">
+        <h3><span class="glyphicon glyphicon-info-sign"></span> How the Beta works</h3>
+        <ul>
+            <li></li>
+        </ul>
+    </div>
+    <div class="col-md-6">
+        <h3><span class="glyphicon glyphicon-link"></span> Next Steps</h3>
+        <!-- <ul>
+            <li>If you are following the <a href="https://devcenter.heroku.com/articles/getting-started-with-nodejs">Getting Started</a> guide, then please head back to the tutorial and follow the next steps!</li>
+            <li>If you deployed this app by deploying the Heroku Button, then in a command line shell, run:</li>
+            <ul>
+                <li><code>git clone https://github.com/heroku/node-js-getting-started.git</code> - this will create a local copy of the source code for the app</li>
+                <li><code>cd node-js-getting-started</code> - change directory into the local source code repository</li>
+                <li><code>heroku git:remote -a &lt;your-app-name></code> - associate the Heroku app with the repository</li>
+                <li>You'll now be set up to run the app locally, or <a href="https://devcenter.heroku.com/articles/getting-started-with-nodejs#push-local-changes">deploy changes</a> to Heroku</li>
+            </ul>
+        </ul> -->
+        <!-- <h3><span class="glyphicon glyphicon-link"></span> Helpful Links</h3>
+        <ul>
+            <li><a href="https://www.heroku.com/home">Heroku</a></li>
+            <li><a href="https://devcenter.heroku.com/">Heroku Dev Center</a></li>
+            <li><a href="https://devcenter.heroku.com/articles/getting-started-with-nodejs">Getting Started with Node on Heroku</a></li>
+            <li><a href="https://devcenter.heroku.com/articles/deploying-nodejs">Deploying Node Apps on Heroku</a></li>
+        </ul> -->
+    </div>
+</div> <!-- row -->
+<div class="alert alert-info text-center" role="alert">
+    Please do work through the Getting Started guide, even if you do know how to stream.  The guide covers the basics of working with Streamster, 
+    and will familiarize you with all the concepts you need in order to start streaming quickly.
+</div>
+</div>
 
 <!-- /ko -->
